Support deactivating accounts via the approval toggle
approveUser becomes setApproval(approved): deactivation revokes refresh
tokens and blocks login with ACCOUNT_NOT_APPROVED. Self-registered
candidates are now auto-approved.